tests/ui/unexpected_after_map_entry.stderr
error: no rules expected the token `=>`
  --> $DIR/unexpected_after_map_entry.rs:13:23
   |
13 |     json!({ "k": true => });
   |                       ^^ no rules expected the token `=>`

error: aborting due to previous error

