tests/ui/unexpected_after_map_entry.rs
use sciformats_serde_json::json;

fn main() {
    json!({ "k": true => });
}
